--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,6 @@ runs:
       shell: bash
 
     - id: output-step
-      run: echo "result=deu boa!" >> GITHUB_OUTPUT
+      run: echo "result=deu boa!" >> GITHUB_ENV
       shell: bash
   
