--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,9 @@ inputs:
     description: 'The message to print'
     required: true
     default: 'Hello, Github Actions!'
+outputs:
+  result:
+    value: ${{ steps.output-step.outputs.result }}
     
 runs:
   using: composite
