--- a/action.yml
+++ b/action.yml
@@ -5,9 +5,6 @@ inputs:
     description: 'The message to print'
     required: true
     default: 'Hello, Github Actions!'
-outputs:
-  result:
-    value: ${{ steps.output-step.outputs.result }}
     
 runs:
   using: composite
@@ -21,3 +18,5 @@ runs:
     
     - run: echo "${{ steps.output-step.outputs.result }}"
       shell: bash
+
+    - run: echo "result=${{ steps.output-step.outputs.result }}" >> $GITHUB_ENV
